--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "php-open-source-saver/jwt-auth": "^2.1",
         "ramsey/uuid": "^4.7"
     },
     "require-dev": {
